...
val APP_TOP_LEVEL_NAV_ITEMS = listOf(
    TopNavigationItem(
        destRoute = Home,
        icon = Icons.Filled.GridView,
        label = Res.string.home,
        routeName = "$routeNamePrefix.Home",
        testTag = "nav_home",
    ),
    TopNavigationItem(
        destRoute = AssignmentList,
        icon = Icons.Filled.ImportContacts,
        label = Res.string.assignments,
        routeName = "$routeNamePrefix.Assignment",
...
                            }
                        }
                    }
                },
                floatingActionButton = {
                    if (appUiStateVal.expandableFabState.visible) {
                        ExpandableFab(
                            state = appUiStateVal.expandableFabState,
                            onToggle = {
                                appUiStateVal = appUiStateVal.copy(
                                    expandableFabState = appUiStateVal.expandableFabState.copy(
                                        expanded = !appUiStateVal.expandableFabState.expanded
                                    )
...
